...
                        .padding(.bottom, 110)
                        .padding(.horizontal, 20)
                    }
                    
                    VStack {
                        Spacer()
                        AddToFavoriteButton(isPlayingHeartAnimation: $isPlayingHeartAnimation, action: handleFavoriteAction)
                            .padding(.bottom, 30)
                    }
                }
            }
            .alert(isPresented: $alertState.isPresented) {
                Alert(title: Text(alertState.message))
...
                    .scaleEffect(0.9)
                    .onAppear {
                        DispatchQueue.main.asyncAfter(deadline: .now() + 2) {
                            isPlayingHeartAnimation = false
                        }
                    }
                    .accessibility(identifier: "HeartAnimation")
            }

            Button(action: {
                isPlayingHeartAnimation = true
                action()
            }) {
...
