...
            }
        }
    }

    func makeUIView(context: Context) -> MKMapView {
        let mapView = MKMapView()
        mapView.accessibilityIdentifier = "MapView" 
        mapView.delegate = context.coordinator
        mapView.showsUserLocation = true

        if mode == .selectLocation {
            let tapGesture = UITapGestureRecognizer(target: context.coordinator, action: #selector(Coordinator.handleTapGesture))
            mapView.addGestureRecognizer(tapGesture)
...
